k8s/compare/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compare
  namespace: dev
  labels:
    app: compare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compare
  template:
    metadata:
      labels:
        app: compare
    spec:
      containers:
      - name: compare
        image: ghcr.io/patricklarocque/compare:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
